Completed scaffolding, crated topbar, started index page

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,11 @@
-INDEX
+%section.welcome-banner-section
+  .container
+    .row
+      .span5
+      .span7
+        Slider
+
+
+%section
+  .container
+    INDEX
