Createt inde banner, fixed js struct

--- a/app/assets/sass/_icons.sass
+++ b/app/assets/sass/_icons.sass
@@ -1,7 +1,7 @@
 @import "icons/*.png"
 +all-icons-sprites
 
-$icons: "flag-rus", "flag-usa", "cart"
+$icons: "flag-rus", "flag-usa", "cart", "arrow-rise", "arrow-fall"
 
 @each $icon in $icons
   .icon-#{$icon}, 
