--- a/app/assets/sass/_variables.scss
+++ b/app/assets/sass/_variables.scss
@@ -22,8 +22,8 @@ $white:                 #fff;
 // -------------------------
 $blue:                  #049cdb;
 $blueDark:              #0064cd;
-$green:                 #46a546;
-$red:                   #9d261d;
+$green:                 #66ff66;
+$red:                   #ff0000;
 $yellow:                #ffc40d;
 $orange:                #f89406;
 $pink:                  #c3325f;
