--- a/app/assets/sass/welcome.css.sass
+++ b/app/assets/sass/welcome.css.sass
@@ -97,3 +97,55 @@ $welcome-form-label-width: 60px
       .controls
         margin:
           left: $welcome-form-label-width + 20px
+
+  .carousel
+    font-size: 16px
+    color: $white
+    line-height: 20px
+    height: $welcome-banner-height - 120px
+    margin: 0
+
+    h2
+      font-weight: normal
+      font-size: 22px
+      line-height: 26px
+      margin:
+        top: 0
+        bottom: 40px
+
+    p
+      margin:
+        bottom: 20px
+
+    .image-block
+      padding:
+        top: 50px
+
+  .carousel-indicators
+    top: auto
+    bottom: 0
+    left: 40%
+
+    li
+      width: 20px
+      height: 20px
+      margin:
+        left: 8px
+      +border-radius(999px)
+      background:
+        color: $white
+      position: relative
+
+      &.active
+        &:after
+          content: ""
+          display: block
+          position: absolute
+          width: 14px
+          height: 14px
+          top: 3px 
+          left: 3px
+          +border-radius(999px)
+          +background-image(linear-gradient(#00b5fc, #004a7d))
+          +box-shadow(inset 0px 2px 0 0 #349fd6)
+
