--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,6 @@
     = render template: "shared/navbar"
     = yield
 
-
+    = render template: "shared/footer"
 
     = javascript_include_tag "application"
