--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,7 +9,7 @@
             %li
               %div
                 impressions/day from 12K+ unique IPs
-              .rise
+              .text-success
                 %i.icon-arrow-rise
                 15.17%
         %li
@@ -19,7 +19,7 @@
             %li
               %div
                 clicks/day from 1.1K unique IPs
-              .rise
+              .text-success
                 %i.icon-arrow-rise
                 5.7%
 
@@ -30,7 +30,7 @@
             %li
               %div
                 B/day from 3 campaigns
-              .fall
+              .text-error
                 %i.icon-arrow-fall
                 4.2%
   .container
@@ -125,7 +125,94 @@
         
 
 
-%section
+%section.welcome-news-section
   .container
-    INDEX
+    .row
+      .span5
+        %h2 Our twitter
+        %ul.unstyled.last-twitts-list
+          %li
+            %p
+              %a{href: "#"} anonymousads 
+              Such advertisers will get all the required support and attention from me. I am even willing to implement it on their side for free.
+            %p.actions
+              %a{href:"#"}
+                3 hours ago
+              •
+              %a{href:"#"}
+                Reply
+              •
+              %a{href:"#"}
+                Retweet
+              •
+              %a{href:"#"}
+                Add to favoriets
+          %li
+            %p
+              %a{href: "#"} anonymousads 
+              Such advertisers will get all the required support and attention from me. I am even willing to implement it on their side for free.
+            %p.actions
+              %a{href:"#"}
+                3 hours ago
+              •
+              %a{href:"#"}
+                Reply
+              •
+              %a{href:"#"}
+                Retweet
+              •
+              %a{href:"#"}
+                Add to favoriets
+          %li
+            %p
+              %a{href: "#"} anonymousads 
+              Such advertisers will get all the required support and attention from me. I am even willing to implement it on their side for free.
+            %p.actions
+              %a{href:"#"}
+                3 hours ago
+              •
+              %a{href:"#"}
+                Reply
+              •
+              %a{href:"#"}
+                Retweet
+              •
+              %a{href:"#"}
+                Add to favoriets
+
+      .span7
+        %h2 Last news
+        %ul.unstyled.last-news-list
+          %li.row
+            .span1
+              Wed 13:30
+            .span6
+              %p
+                = link_to "Will get all the required support and attention get all the required support and attention.", "#"
+          %li.row
+            .span1
+              Tue 11:30
+            .span6
+              %p
+                = link_to "Get all the required and attention support.", "#"
+          %li.row
+            .span1
+              Wed 13:30
+            .span6
+              %p
+                = link_to "A time lapse video tribute to London, made during my final days studying abroad in that lovely city made during my final days studying abroad in that lovely city.", "#"
+          %li.row
+            .span1
+              Wed 13:30
+            .span6
+              %p
+                = link_to "Will get all the required support and attention get all the required support and attention.", "#"
+          %li.row
+            .span1
+              Tue 11:30
+            .span6
+              %p
+                = link_to "Get all the required and attention support.", "#"
+
+
 
