Fixed scaffolding, fixed banners, fixed stylesheets struct

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -10,9 +10,10 @@ body{
   padding-top: $navbarHeight;
 }
 
+@import "scaffolding";
 
 // Include responsive Bootstrap styles
-@import "bootstrap-responsive";
+// @import "bootstrap-responsive";
 
 @import "type";
 
