--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -121,7 +121,7 @@ $welcome-form-label-width: 60px
   .carousel-indicators
     top: auto
     bottom: 0
-    left: 40%
+    left: 30%
 
     li
       width: 20px
@@ -154,9 +154,12 @@ $welcome-form-label-width: 60px
 
 
   > li
-    .span6
+    .span10
       margin:
-        left: 5px
+        left: 0
+
+    .span2
+      width: 12%
 
     p
       line-height: 16px
