--- a/app/views/shared/footer.html.haml
+++ b/app/views/shared/footer.html.haml
@@ -1,6 +1,6 @@
 %footer.footer
   .container
-    .row
+    .row-fluid
       .span3
         %legend About
         %ul.unstyled
@@ -34,7 +34,7 @@
 
     %hr
 
-    .row
+    .row-fluid
       .span12.text-center
         .copy
           &copy; AnonymousAds 2011-2013
