--- a/app/assets/stylesheets/_navbar.sass
+++ b/app/assets/stylesheets/_navbar.sass
@@ -3,9 +3,7 @@ $cart-block-padding: 10px
 
 .navbar
   .brand
-    padding:
-      top: 15px
-      bottom: 15px
+    padding: 15px 16px
 
   .divider-vertical
     height: $navbarHeight - $divider-margins
