--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -25,7 +25,7 @@ $welcome-form-label-width: 60px
       margin: 0
 
       li
-        margin: 0 10px
+        margin: 0
         padding: 0
 
         ul
