Created slider markup

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -96,18 +96,140 @@
 
           .carousel-inner
             .item.active
-              = image_tag "banner-slides/index_eng0.png"
+              %h2
+                WHAT IS ANONYMOUS 
+              .row
+                .span7
+                  %p
+                    Anonymous Ads - ad network without store of personal info
+                  %ul.carousel-list
+                    %li
+                      Wide coverage
+                    %li
+                      Concrete advertising spaces
+                    %li
+                      Low cost
+                .span5
+                  .icon-carousel-aad
             .item
-              = image_tag "banner-slides/index_eng1.png"
+              %h2
+                WHAT IS ANONYMOUS ADS
+              .row
+                .span7
+                  %p
+                    Ad network without collecting facts about users.
+                  %p
+                    You are good for us regardless of the quantity and quality of your traffic. Any rates of CPM and CPC. Advertiser gives you the budget plus rewards for effective traffic. Pre-moderation of all ads, automatic withdrawal Ƀ, direct advertising sales from your site.
+                .span5
+                  .icon-carousel-bitcoin-globe
             .item
-              = image_tag "banner-slides/index_eng2.png"
+              %h2
+                ADVERTISE WITH US
+              %p
+                Create ad, choose traffic sources, set daily budget and deposit funds.
+              %ul.carousel-features
+                %li
+                  .icon-carousel-doc-speaker
+                  %p
+                    YOUR AD
+                %li
+                  .icon-carousel-plus
+                %li
+                  .icon-carousel-basket-globe-90
+                  %p
+                    TRAFFIC
+                    %br SOURCES
+                %li
+                  .icon-carousel-plus
+                %li
+                  .icon-carousel-bitcoin-speedo
+                  %p
+                    Daily
+                    %br Budget
+                %li
+                  .icon-carousel-equal
+                %li
+                  .icon-carousel-board-graph-90
+                  %p
+                    Advertising
+                    %br Campaign
             .item
-              = image_tag "banner-slides/index_eng3.png"
+              %h2
+                CAMPAIGN OPTIMIZATION
+              %p
+                Use goal tracking to detect best performing ad units and reward them to improve the quality of traffic you receive.
+              %ul.carousel-features.features-120
+                %li
+                  .icon-carousel-board-graph-120
+                  %p
+                    ADVERTISING
+                    %br CAMPAIGN
+                %li
+                  .icon-carousel-plus
+                %li
+                  .icon-carousel-globe-steps
+                  %p
+                    Tracking
+                    %br GOAL
+                %li
+                  .icon-carousel-equal
+                %li
+                  .icon-carousel-board-stats
+                  %p
+                    Optimized
+                    %br AdS Campaign
             .item
-              = image_tag "banner-slides/index_eng4.png"
+              %h2
+                EARN WITH US
+              %p
+                Get A-ADS code and embed it on your site or application.
+              %ul.carousel-features.features-120
+                %li
+                  .icon-carousel-bitcoin-chips
+                  %p
+                    YOUR INCOME
+                %li
+                  .icon-carousel-equal
+                %li
+                  .icon-carousel-doc-person
+                  %p
+                    A-ADS
+                    %br ADVERTISERS
+                %li
+                  .icon-carousel-plus
+                %li
+                  .icon-carousel-basket-globe-120
+                  %p
+                    YOUR traffic
+                    %br sources
             .item
-              = image_tag "banner-slides/index_eng5.png"
-        
+              %h2
+                AFFILIATE PROGRAM
+              %p
+                All publishers are our partners, we pay 50% of fees from advertisers attracted by them.
+              %ul.carousel-features.features-120
+                %li
+                  .icon-carousel-ads-example
+                  %p
+                    Click on Ref. link
+                    %br from your site
+                    %small
+                      located in the banner advertising
+                      %br network - picture above
+                %li
+                  .icon-carousel-plus
+                %li
+                  .icon-carousel-basket-docs
+                  %p
+                    Buy ad
+                    %br ADVERTISERS
+                %li
+                  .icon-carousel-equal
+                %li
+                  .icon-carousel-bitcoin-chips-half
+                  %p
+                    YOUR 50%
+                    %br FROM FEES        
 
 
 %section.welcome-news-section
