--- a/app/assets/stylesheets/_scaffolding.sass
+++ b/app/assets/stylesheets/_scaffolding.sass
@@ -1,16 +1,17 @@
 .container
-  min-width: 1012px
+  min-width: 972px
   max-width: 1200px
   width: auto
+  padding: 0 20px
 
 body
   > section
-    min-width: 1012px
+    min-width: 972px
 
 .navbar-fixed-top
-  min-width: 1012px
+  min-width: 972px
 
 .navbar-fixed-top .container
-  min-width: 1012px
+  min-width: 972px
   max-width: 1200px
   width: auto
