--- a/app/assets/stylesheets/_carousel.sass
+++ b/app/assets/stylesheets/_carousel.sass
@@ -17,6 +17,8 @@ $icons-carousel: "aad", "basket-globe-90", "bitcoin-speedo", "doc-speaker", "ads
   height: $welcome-banner-height - 120px
   margin: 0
   .carousel-inner
+    .item
+      height: $welcome-banner-height - 120px
     .row
       margin: 
         left: 0
