--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -25,8 +25,10 @@ $welcome-form-label-width: 60px
       margin: 0
 
       li
-        margin: 0
         padding: 0
+        &+li
+          margin:
+            left: 20px
 
         ul
           text-align: left
