--- a/app/assets/stylesheets/_navbar.sass
+++ b/app/assets/stylesheets/_navbar.sass
@@ -48,3 +48,8 @@ $cart-block-padding: 10px
       top: $divider-margins / 2
     height: $navbarHeight - $cart-block-padding * 2 - $divider-margins
     font-size: 13px
+
+  .nav-cart-block
+    [class^="icon-"],
+    [class*=" icon-"]
+      color: $linkColor
