--- a/app/views/shared/navbar.html.haml
+++ b/app/views/shared/navbar.html.haml
@@ -19,23 +19,23 @@
               = link_to "FAQ", "#"
             %li.dropdown
               %a#locale-switcher.dropdown-toggle{href: "#", data: {toggle: "dropdown"}}
-                %i.icon-flag-usa
+                %i.sprite-flag-usa
                 %b.caret
 
               %ul.dropdown-menu{role: "menu", aria: {labelledby: "locale-switcher"}}
                 %li.active
                   %a{href: "#"}
-                    %i.icon-flag-usa
+                    %i.sprite-flag-usa
                     English
                 %li
                   %a{href: "#"}
-                    %i.icon-flag-rus
+                    %i.sprite-flag-rus
                     Русский
         .navbar-cell
           .divider-vertical
         .navbar-cell{style:"width:100%"}
           .nav-cart-block
-            %i.icon-cart
+            %i.icon-shopping-cart
             = link_to "Select ad and traffic sources", "#"
         .navbar-cell
           .divider-vertical
