--- a/app/assets/stylesheets/_icons.sass
+++ b/app/assets/stylesheets/_icons.sass
@@ -1,14 +1,25 @@
-@import "icons/*.png"
-+all-icons-sprites
+@import "sprite/*.png"
++all-sprite-sprites
 
-$icons: "flag-rus", "flag-usa", "cart", "arrow-rise", "arrow-fall"
+$sprite: "flag-rus", "flag-usa", "arrow-rise", "arrow-fall"
 
-@each $icon in $icons
-  .icon-#{$icon}, 
-  .dropdown-menu > .active > a > .icon-#{$icon},
-  .dropdown-menu > .active > a:hover > .icon-#{$icon},
-  .dropdown-menu > li > a > .icon-#{$icon},
-  .dropdown-menu > li > a:hover > .icon-#{$icon}
-    +icons-sprite(#{$icon})
-    height: icons-sprite-height(#{$icon})
-    width: icons-sprite-width(#{$icon})
+[class^="sprite-"],
+[class*=" sprite-"]
+  display: inline-block
+  width: 14px
+  height: 14px
+  *margin-right: .3em
+  line-height: 14px
+  vertical-align: text-top
+  background-repeat: no-repeat
+  margin-top: 1px
+
+@each $icon in $sprite
+  .sprite-#{$icon}, 
+  .dropdown-menu > .active > a > .sprite-#{$icon},
+  .dropdown-menu > .active > a:hover > .sprite-#{$icon},
+  .dropdown-menu > li > a > .sprite-#{$icon},
+  .dropdown-menu > li > a:hover > .sprite-#{$icon}
+    +sprite-sprite(#{$icon})
+    height: sprite-sprite-height(#{$icon})
+    width: sprite-sprite-width(#{$icon})
