--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -10,7 +10,7 @@
               %div
                 impressions/day from 12K+ unique IPs
               .text-success
-                %i.icon-arrow-rise
+                %i.sprite-arrow-rise
                 15.17%
         %li
           %ul.inline
@@ -20,7 +20,7 @@
               %div
                 clicks/day from 1.1K unique IPs
               .text-success
-                %i.icon-arrow-rise
+                %i.sprite-arrow-rise
                 5.7%
 
         %li
@@ -31,7 +31,7 @@
               %div
                 B/day from 3 campaigns
               .text-error
-                %i.icon-arrow-fall
+                %i.sprite-arrow-fall
                 4.2%
   .container
     .row-fluid
@@ -110,7 +110,7 @@
                     %li
                       Low cost
                 .span5
-                  .icon-carousel-aad
+                  .carousel-icon-aad
             .item
               %h2
                 WHAT IS ANONYMOUS ADS
@@ -121,7 +121,7 @@
                   %p
                     You are good for us regardless of the quantity and quality of your traffic. Any rates of CPM and CPC. Advertiser gives you the budget plus rewards for effective traffic. Pre-moderation of all ads, automatic withdrawal Ƀ, direct advertising sales from your site.
                 .span5
-                  .icon-carousel-bitcoin-globe
+                  .carousel-icon-bitcoin-globe
             .item
               %h2
                 ADVERTISE WITH US
@@ -129,27 +129,27 @@
                 Create ad, choose traffic sources, set daily budget and deposit funds.
               %ul.carousel-features
                 %li
-                  .icon-carousel-doc-speaker
+                  .carousel-icon-doc-speaker
                   %p
                     YOUR AD
                 %li
-                  .icon-carousel-plus
+                  .carousel-icon-plus
                 %li
-                  .icon-carousel-basket-globe-90
+                  .carousel-icon-basket-globe-90
                   %p
                     TRAFFIC
                     %br SOURCES
                 %li
-                  .icon-carousel-plus
+                  .carousel-icon-plus
                 %li
-                  .icon-carousel-bitcoin-speedo
+                  .carousel-icon-bitcoin-speedo
                   %p
                     Daily
                     %br Budget
                 %li
-                  .icon-carousel-equal
+                  .carousel-icon-equal
                 %li
-                  .icon-carousel-board-graph-90
+                  .carousel-icon-board-graph-90
                   %p
                     Advertising
                     %br Campaign
@@ -160,21 +160,21 @@
                 Use goal tracking to detect best performing ad units and reward them to improve the quality of traffic you receive.
               %ul.carousel-features.features-120
                 %li
-                  .icon-carousel-board-graph-120
+                  .carousel-icon-board-graph-120
                   %p
                     ADVERTISING
                     %br CAMPAIGN
                 %li
-                  .icon-carousel-plus
+                  .carousel-icon-plus
                 %li
-                  .icon-carousel-globe-steps
+                  .carousel-icon-globe-steps
                   %p
                     Tracking
                     %br GOAL
                 %li
-                  .icon-carousel-equal
+                  .carousel-icon-equal
                 %li
-                  .icon-carousel-board-stats
+                  .carousel-icon-board-stats
                   %p
                     Optimized
                     %br AdS Campaign
@@ -185,20 +185,20 @@
                 Get A-ADS code and embed it on your site or application.
               %ul.carousel-features.features-120
                 %li
-                  .icon-carousel-bitcoin-chips
+                  .carousel-icon-bitcoin-chips
                   %p
                     YOUR INCOME
                 %li
-                  .icon-carousel-equal
+                  .carousel-icon-equal
                 %li
-                  .icon-carousel-doc-person
+                  .carousel-icon-doc-person
                   %p
                     A-ADS
                     %br ADVERTISERS
                 %li
-                  .icon-carousel-plus
+                  .carousel-icon-plus
                 %li
-                  .icon-carousel-basket-globe-120
+                  .carousel-icon-basket-globe-120
                   %p
                     YOUR traffic
                     %br sources
@@ -209,7 +209,7 @@
                 All publishers are our partners, we pay 50% of fees from advertisers attracted by them.
               %ul.carousel-features.features-120
                 %li
-                  .icon-carousel-ads-example
+                  .carousel-icon-ads-example
                   %p
                     Click on Ref. link
                     %br from your site
@@ -217,16 +217,16 @@
                       located in the banner advertising
                       %br network - picture above
                 %li
-                  .icon-carousel-plus
+                  .carousel-icon-plus
                 %li
-                  .icon-carousel-basket-docs
+                  .carousel-icon-basket-docs
                   %p
                     Buy ad
                     %br ADVERTISERS
                 %li
-                  .icon-carousel-equal
+                  .carousel-icon-equal
                 %li
-                  .icon-carousel-bitcoin-chips-half
+                  .carousel-icon-bitcoin-chips-half
                   %p
                     YOUR 50%
                     %br FROM FEES        
