Fixed classes typo

--- a/app/assets/stylesheets/_carousel.sass
+++ b/app/assets/stylesheets/_carousel.sass
@@ -88,8 +88,8 @@ $icons-carousel: "aad", "basket-globe-90", "bitcoin-speedo", "doc-speaker", "ads
     border-radius: 50%
     box-shadow: inset 0px 0px 2px 0px rgba( 20, 196, 236, 0.9 ), 0px 0px 3px 0px rgba( 20, 196, 236, 0.9 ), 0px 0px 20px 0px rgba( 255, 255, 255, 0.9 ), 0px 0px 30px 0px rgba( 20, 196, 236, 0.9 )
   .features-120
-    .icon-carousel-plus,
-    .icon-carousel-equal
+    .carousel-icon-plus,
+    .carousel-icon-equal
       margin:
         top: 45px
 
