--- a/app/assets/stylesheets/_navbar.sass
+++ b/app/assets/stylesheets/_navbar.sass
@@ -50,6 +50,5 @@ $cart-block-padding: 10px
     font-size: 13px
 
   .nav-cart-block
-    [class^="icon-"],
-    [class*=" icon-"]
+    .icon-shopping-cart
       color: $linkColor
