--- a/app/assets/stylesheets/_carousel.sass
+++ b/app/assets/stylesheets/_carousel.sass
@@ -75,14 +75,14 @@ $icons-carousel: "aad", "basket-globe-90", "bitcoin-speedo", "doc-speaker", "ads
         text-shadow: 0px 1px 1px rgba( 0, 0, 0, 0.5 )
         &+li
           margin:
-            left: 17px
+            left: 15px
         p
           font-size: 14px
           margin:
             top: 10px
             bottom: 0
-  .icon-carousel-plus,
-  .icon-carousel-equal
+  .carousel-icon-plus,
+  .carousel-icon-equal
     margin:
       top: 30px
     border-radius: 50%
