--- a/app/assets/stylesheets/_navbar.sass
+++ b/app/assets/stylesheets/_navbar.sass
@@ -15,6 +15,10 @@ $cart-block-padding: 10px
     li
       float: none
       +inline-block
+      a
+        padding:
+          left: 8px
+          right: 8px
     .dropdown-menu
       li
         display: block
