--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -6,9 +6,11 @@ $welcome-form-label-width: 60px
   background:
     color: $welcome-banner-bg
     image: image-url("welcome-banner-bg.png")
-    position: top right
+    position: center right
     repeat: no-repeat
-  height: $welcome-banner-height
+  //height: $welcome-banner-height
+  padding:
+    bottom: 20px
 
   .welcome-banner-header
     background:
