--- a/app/assets/stylesheets/_navbar.sass
+++ b/app/assets/stylesheets/_navbar.sass
@@ -13,7 +13,7 @@ $cart-block-padding: 10px
         white-space: nowrap
   .btn
     margin:
-      top: 22px
+      top: 0
   .nav
     float: none
     margin: 0
