Finished 1st page

--- a/app/assets/stylesheets/_icons.sass
+++ b/app/assets/stylesheets/_icons.sass
@@ -1,7 +1,7 @@
 @import "sprite/*.png"
 +all-sprite-sprites
 
-$sprite: "flag-rus", "flag-usa", "arrow-rise", "arrow-fall"
+$sprite: "flag-rus", "flag-usa", "arrow-rise", "arrow-fall", "icon1", "icon2", "icon3", "icon4", "icon5", "icon6", "icon7", "icon8", "icon9"
 
 [class^="sprite-"],
 [class*=" sprite-"]
