--- a/app/assets/stylesheets/_buttons.sass
+++ b/app/assets/stylesheets/_buttons.sass
@@ -1,3 +1,45 @@
 .btn
   font-weight: bold
   
+
+.input-file
+  width: 100%
+  box-sizing: border-box
+  position: relative
+  overflow: hidden
+  cursor: pointer
+  
+  > input
+    width: 100%
+    height: 100%
+    position: absolute
+    top: 0
+    left: 0
+    opacity: 0
+    cursor: pointer
+
+  > button.btn
+    width: 100%
+    border:
+      width: 1px
+      style: dashed
+      color: #0088cc
+    background:
+      color: #dbf1fc
+      image: none
+    text-align: left
+
+    > i
+      float: right
+      margin:
+        top: 4px
+
+  &:hover
+    > button.btn
+      background:
+        color: #0088cc
+  
+button.btn.btn-xlarge, input[type="submit"].btn.btn-xlarge
+  padding:
+    top: 15px
+    bottom: 15px
