--- a/app/assets/stylesheets/_type.css.sass
+++ b/app/assets/stylesheets/_type.css.sass
@@ -29,3 +29,25 @@ hr
 a
   &.underline
     text-decoration: underline
+
+
+.text-bold
+  font-weight: bold
+
+.font-size-13
+  font-size: 13px
+
+.font-size-15
+  font-size: 15px
+
+.margin-bottom-10
+  margin:
+    bottom: 10px
+
+.margin-bottom-20
+  margin:
+    bottom: 20px
+
+.margin-bottom-30
+  margin:
+    bottom: 30px
